# NUBZ

./: .mailmap  Makefile  README.md  create_database.py  generate_thrift.sh  init.sh  prepare_maps.sh
server/: .clang-format  CMakeLists.txt  config.example.cfg
server/cmake/: FindPostgreSQL.cmake
server/src/: CommandHandler.cpp  CommandHandler.h  Config.cpp  Config.h  FileHelper.cpp  FileHelper.h  main.cpp
server/src/command/: AbstractCommand.h  CreateNewExhibitCommand.cpp  CreateNewExhibitCommand.h  GetExhibitsCommand.cpp  GetExhibitsCommand.h  GetExperimentDataCommand.cpp  GetExperimentDataCommand.h  GetMapImageTilesCommand.cpp  GetMapImageTilesCommand.h  GetMapImagesCommand.cpp  GetMapImagesCommand.h  InputChecker.cpp  InputChecker.h  InvalidInput.h  PingCommand.cpp  PingCommand.h  ReserveIdForReportCommand.cpp  ReserveIdForReportCommand.h  SaveRawReportCommand.cpp  SaveRawReportCommand.h  SetExhibitFrameCommand.cpp  SetExhibitFrameCommand.h  SetMapImageCommand.cpp  SetMapImageCommand.h  commands.h  commands_common.h
server/src/communication/: CMakeLists.txt  Server.cpp  Server.h  server_constants.cpp  server_constants.h  server_types.cpp  server_types.h  structs_constants.h  structs_types.cpp  structs_types.h
server/src/db/: CMakeLists.txt  Database.cpp  Database.h  DatabaseSession.cpp  DatabaseSession.h  db_info.h  sql.h
server/src/db/command/: DatabaseCommand.h  GetActions.cpp  GetActions.h  GetCounter.cpp  GetCounter.h  GetCurrentExperiment.cpp  GetCurrentExperiment.h  GetExhibits.cpp  GetExhibits.h  GetExperiments.cpp  GetExperiments.h  GetMapImages.cpp  GetMapImages.h  GetMapTiles.cpp  GetMapTiles.h  GetMapTilesInfo.cpp  GetMapTilesInfo.h  GetMultipleChoiceQuestionOptions.cpp  GetMultipleChoiceQuestionOptions.h  GetMultipleChoiceQuestions.cpp  GetMultipleChoiceQuestions.h  GetRawReports.cpp  GetRawReports.h  GetSimpleQuestions.cpp  GetSimpleQuestions.h  GetSortQuestionOptions.cpp  GetSortQuestionOptions.h  GetSortQuestions.cpp  GetSortQuestions.h  GetVersion.cpp  GetVersion.h  IncrementCounter.cpp  IncrementCounter.h  InsertAction.cpp  InsertAction.h  InsertExhibit.cpp  InsertExhibit.h  (+30 more)
server/src/gen-cpp/: Server.h  structs_constants.cpp
server/src/image/: ImageProcessor.cpp  ImageProcessor.h
server/src/io/: Action.cpp  Action.h  Exhibit.cpp  Exhibit.h  InvalidInput.h  MapElementFrame.cpp  MapElementFrame.h  Size.cpp  Size.h  io.h
server/src/repository/: Actions.cpp  Actions.h  CMakeLists.txt  Counters.cpp  Counters.h  DefaultRepo.h  Exhibits.cpp  Exhibits.h  Experiments.cpp  Experiments.h  InvalidData.h  MapImages.cpp  MapImages.h  MultipleChoiceQuestions.cpp  MultipleChoiceQuestions.h  Reports.cpp  Reports.h  SimpleQuestions.cpp  SimpleQuestions.h  SortQuestions.cpp  SortQuestions.h
server/src/server/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  commands.h  io.h
server/src/utils/: CMakeLists.txt  Config.cpp  Config.h  FileHandler.cpp  FileHandler.h  ImageProcessor.cpp  ImageProcessor.h  TimePoint.h  fp_algorithm.h  log.h  type_traits.h
www/: db.sqlite3  (+2 more)
(+830 files in other folders)
